--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ kiwisolver==1.3.2
 mail2gg==0.1.5
 MarkupSafe==2.1.3
 matplotlib==3.5.1
-numpy==1.22.1
+numpy==1.25.0
 oauth2client==4.1.3
 oauthlib==3.2.2
 packaging==21.3
@@ -76,3 +76,4 @@ Werkzeug==2.2.3
 WTForms==3.0.1
 wtforms-validators==1.0.0
 zipp==3.15.0
+gunicorn==20.1.0
